CORE-24593: Fixing the reward activity overflow in mobile.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-myaccount/component/_aura-loyalty-rewards-activity.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-myaccount/component/_aura-loyalty-rewards-activity.scss
@@ -1,6 +1,12 @@
 .loyalty-club-rewards-wrapper {
   color: $aura-loyalty-activity-txt;
 
+  .reward-activity-statement {
+    @include breakpoint($upto-desktop) {
+      overflow-y: auto;
+    }
+  }
+
   .header-row,
   .reward-activity > div.statement-row {
     min-height: 3.125rem;
